fix element spacing on films index page

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -57,9 +57,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  .each_movie + .each_movie {
-    margin-right: 30px;
-    margin-left: 30px;
+    margin-right: 20px;
+    margin-left: 20px;
   }
 }
